[gd_scene load_steps=8 format=3 uid="uid://d2153b3bionhu"]

[ext_resource type="Texture2D" uid="uid://xuriaab82373" path="res://assets/objects/basic_grass_biom_things.png" id="1_lwbpo"]
[ext_resource type="PackedScene" uid="uid://153oswypblu1" path="res://scenes/components/hurt_component.tscn" id="2_sx6ol"]
[ext_resource type="Script" uid="uid://dc2qsl4atuc4j" path="res://scenes/objects/trees/large_tree.gd" id="2_wjqkr"]
[ext_resource type="PackedScene" uid="uid://lmiuyqu2nw0s" path="res://scenes/components/damage_component.tscn" id="3_ivetc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sx6ol"]
atlas = ExtResource("1_lwbpo")
region = Rect2(16, 0, 32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_lwbpo"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sx6ol"]
size = Vector2(8, 18)

[node name="LargeTree" type="Sprite2D"]
texture = SubResource("AtlasTexture_sx6ol")
offset = Vector2(0, -13)
script = ExtResource("2_wjqkr")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_lwbpo")

[node name="HurtComponent" parent="." instance=ExtResource("2_sx6ol")]
tool = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_sx6ol")

[node name="DamageComponent" parent="." instance=ExtResource("3_ivetc")]
max_damage = 5
